--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,7 @@
-attrs==22.2.0
-autocommand==2.2.2
-cffi==1.15.1
-cryptography==40.0.2
-dbus-python==1.3.2
-distro==1.8.0
-fastjsonschema==2.17.1
-inflect==6.0.4
-jaraco.context==4.3.0
-jaraco.functools==3.7.0
-jaraco.text==3.11.1
-libtorrent==2.0.9
-more-itertools==9.1.0
-optimus-manager==1.4
-ordered-set==4.1.0
-packaging==23.1
-platformdirs==3.5.1
-ply==3.11
-psutil==5.9.5
-pycparser==2.21
-pydantic==1.10.9
-ranger-fm==1.9.3
-tomli==2.0.1
-trove-classifiers==2023.5.25
-typing_extensions==4.6.3
-validate-pyproject==0.13.post1.dev0+gb752273.d20230520
+django
+djangorestframework
+psycopg2-binary
+Pillow
+django-environ
+django-import-export
+dicttoxml
