--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
 
-  server:
+  web:
     build: .
     command: bash -c "while !</dev/tcp/db/5432; do sleep 1; done; 
              python manage.py makemigrations --no-input
@@ -18,12 +18,21 @@ services:
              && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app
-    ports:
-      - "8000:8000"
     depends_on:
       - db
     environment:
       DEBUG: 'False'
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx-container
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - .:/app
+    depends_on:
+      - web
 
 volumes:
     postgres_data:
